test/files/neg/t3604.scala
object Main {
  <div>
    <abbr></div>
    { "..." }
  </div>
}
